This is my code. My code is amazing.

--- a/docs/party/run/202208.md
+++ b/docs/party/run/202208.md
@@ -2,3 +2,12 @@
 ---
 
 <video src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/a.mp4" controls="controls" />
+<video src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/b.mp4" controls="controls" />
+
+
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2380.jpeg" />
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2381.jpeg" />
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2383.jpeg" />
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2385.jpeg" />
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2386.jpeg" />
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2387.jpeg" />
