--- a/docs/party/run/202208.md
+++ b/docs/party/run/202208.md
@@ -1,13 +1,27 @@
 # 2022 年 8 月
 ---
 
-<video src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/a.mp4" controls="controls" />
+
+<Swiper :items="[
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/a.mp4',
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/b.mp4',
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2380.jpeg',
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2381.jpeg',
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2383.jpeg',
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2386.jpeg',
+'//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2387.jpeg',
+]"
+/>
+
+<!-- <video src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/a.mp4" controls="controls" />
 <video src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/b.mp4" controls="controls" />
-
-
 <img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2380.jpeg" />
 <img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2381.jpeg" />
 <img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2383.jpeg" />
 <img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2385.jpeg" />
 <img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2386.jpeg" />
-<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2387.jpeg" />
+<img src="//cdn.jsdelivr.net/gh/qq-perf/pic@main/2022/8/WechatIMG2387.jpeg" /> -->
+
+
+
+
